--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@
 NEO4J_URI=bolt://localhost:7687
 NEO4J_USERNAME=neo4j
 NEO4J_PASSWORD=your_neo4j_password
+NEO4J_DATABASE=neo4j
 
 # OpenAI API Configuration
 OPENAI_API_KEY=your_openai_api_key_here
