--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ scipy>=1.11.0
 # Text processing and NLP
 spacy>=3.6.0
 nltk>=3.8.0
+scikit-learn>=1.3.0
 
 # Additional utilities
 python-dotenv>=1.0.0
